<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:fillViewport="true"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:padding="15dp">

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/login_title"
			android:textStyle="bold" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="@string/login_greeting"
			android:textStyle="normal" />

		<EditText
			android:id="@+id/login_email"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:inputType="textEmailAddress"
			android:hint="@string/login_email" />

		<EditText
			android:id="@+id/login_password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:hint="@string/login_password" />

		<Button
			android:id="@+id/login_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="@string/login_button" />

		<TextView
			android:id="@+id/login_forgotten"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/login_forgotten" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="@string/login_new_account" />

		<Button
			android:id="@+id/login_new_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="@string/login_new_button" />

	</LinearLayout>
</ScrollView>

